@@ -1,4 +1,6 @@
 ---
+"반기문": "Ban-gimun"
+"방이문": "Bang-imun"
 "구미": "Gumi"
 "영동": "Yeongdong"
 "백암": "Baegam"
