@@ -2,6 +2,7 @@
 * Removed Korean::Char#org
 * Code refactoring
 * Korean#romanize no more capitalizes the output string
+* Korean#romanize does not affect non-Korean characters
 * yard documentation
 
 === 0.1.0 / 2011/04/05
